tests/errors/surf_type_06.ki
# type/operator: a String is not callable
var s = "hi"
discard s()
